--- a/css/style.css
+++ b/css/style.css
@@ -392,8 +392,8 @@ section {
     color: var(--black);
 }
 
-.featured .featured-slider .box .content .price {
-    font-size: 2.2rem;
+.featured .featured-slider .box .content .writer {
+    font-size: 1.5rem;
     color: var(--black);
     padding-top: 1rem;
 }
@@ -442,8 +442,8 @@ section {
     color: var(--black);
 }
 
-.arrivals .arrivals-slider .box .content .price {
-    font-size: 1.75rem;
+.arrivals .arrivals-slider .box .content .writer {
+    font-size: 1.5rem;
     color: var(--black);
     padding-bottom: .5rem;
 }
@@ -493,6 +493,49 @@ section {
     font-size: 1.7rem;
     color: var(--green);
 }
+
+
+.heading {
+   width: 100%;
+   height: 20rem;
+   padding: 6rem;
+   font-size: 3rem;
+   color: black;
+   background-color:darkslateblue;
+}
+
+.contact form {
+    margin: 0 auto;
+    background-color: var(--light-bg);
+    border-radius: .5rem;
+    border: var(--border);
+    padding: 2rem;
+    max-width: 50rem;
+    text-align: center;
+ }
+ 
+ 
+ .contact form h3 {
+    font-size: 1.3rem;
+    margin-bottom: 1rem;
+    color: var(--black);
+ }
+ 
+ .contact form .box {
+    margin: 1rem 0;
+    width: 100%;
+    border: var(--border);
+    background-color: var(--white);
+    padding: 1rem 1rem;
+    font-size: 1.8rem;
+    color: var(--black);
+    border-radius: .5rem;
+ }
+ 
+ .contact form textarea {
+    height: 15rem;
+    resize: none;
+ }
 
 
 .counter-grid {
