--- a/css/style.css
+++ b/css/style.css
@@ -494,8 +494,49 @@ section {
     color: var(--green);
 }
 
+.registration .heading {
+    width: 100%;
+    height: 20rem;
+    padding: 6rem;
+    font-size: 3rem;
+    color: black;
+    background-color:darkslateblue;
+ }
 
-.heading {
+ .registration .condition h3 {
+    font-size: 2rem;
+    margin-top: 5rem;
+    padding-left: 20rem;
+    margin-bottom: 1rem;
+    color: var(--black);
+ }
+ 
+ .registration .condition p {
+    margin-top: 2rem;
+    padding-left: 20rem;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    color: var(--black);
+ }
+
+ .registration .form p {
+    margin-top: 5rem;
+    padding-left: 10rem;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    color: var(--black);
+ }
+
+ .registration .form .download {
+    margin: 0 auto;
+    text-align: center;
+    margin-bottom: 5rem;
+ }
+
+
+
+
+.contact .heading {
    width: 100%;
    height: 20rem;
    padding: 6rem;
