--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ section {
 
 .header .header-1 {
     background: #ffffff;
-    padding: 1.5rem 3%;
+    padding: 0rem 3%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -571,6 +571,40 @@ section {
     -o-text-stroke-color: var(--green);
   }
   
+
+
+/* 
+
+ .login form {
+     margin: 0 auto;
+     background-color: var(--light-bg);
+     border-radius: .5rem;
+     border: var(--border);
+     padding: 2rem;
+     max-width: 50rem;
+     text-align: center;
+  }
+  
+  
+  .login form h2 {
+     font-size: 1.3rem;
+     margin-bottom: 1rem;
+     color: var(--black);
+  }
+  
+  .login form .box {
+     margin: 1rem 0;
+     width: 100%;
+     border: var(--border);
+     background-color: var(--white);
+     padding: 0.7rem 1rem;
+     font-size: 1.5rem;
+     color: var(--black);
+     border-radius: .5rem;
+  } */
+
+
+
 
 
 .footer .box-container {
