--- a/css/style.css
+++ b/css/style.css
@@ -595,6 +595,7 @@ section {
     text-align: justify;
     color: black;
     padding: 1rem 0;
+    margin-right: 5rem;
 }
 
 .footer .box-container .box a {
