--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,46 @@ section {
 }
 
 
+/* 
+
+ .ticker {
+    display: flex;
+    flex-wrap: wrap;
+    width: 80%;
+    height: 60px;
+    margin: 0 auto;
+} 
+.news {
+    width: 76%;
+    background: #cc4444;
+    padding: 0 2%;
+}
+.title {
+    width: 20%;
+    text-align: center;
+    background: #c81c1c;
+    position: relative;
+}
+.title:after {
+    position: absolute;
+    content: "";
+    right: -16%;
+    border-left: 20px solid #c81c1c;
+    border-top: 33px solid transparent;
+    border-right: 20px solid transparent;
+    border-bottom: 33px solid transparent;
+    top: 0;
+}
+.title h5 {
+    font-size: 28px;
+    margin: 8% 0;
+}
+.news marquee {
+    font-size: 28px;
+} */
+
+
+
 .header .header-2 {
     background: var(--green);
 }
