--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ section {
 
 .btn {
     margin-top: 1rem;
-    display: inline-block;
+    display: flex;
     padding: .9rem 3rem;
     border-radius: .5rem;
     color: #fff;
@@ -82,6 +82,8 @@ section {
     font-size: 1.7rem;
     cursor: pointer;
     font-weight: 500;
+    text-align: center;
+    align-items: center;
 }
 
 .btn:hover {
@@ -346,6 +348,7 @@ section {
     font-size: 1.4rem;
     color: var(--black);
     padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 .featured .featured-slider .box .content .stars i {
     font-size: 1.5rem;
