--- a/css/style.css
+++ b/css/style.css
@@ -411,6 +411,7 @@ section {
 .answer .heading {
     width: 100%;
     height: 20rem;
+    margin-top: 1.5rem;
     padding: 6rem;
     font-size: 3rem;
     color: black;
@@ -447,6 +448,7 @@ section {
 .registration .heading {
     width: 100%;
     height: 20rem;
+    margin-top: 1.5rem;
     padding: 6rem;
     font-size: 3rem;
     color: black;
@@ -498,6 +500,7 @@ section {
 .online-registration .heading {
     width: 100%;
     height: 20rem;
+    margin-top: 1.5rem;
     padding: 6rem;
     font-size: 3rem;
     color: black;
@@ -544,6 +547,7 @@ section {
 .regconfirm .heading {
     width: 100%;
     height: 20rem;
+    margin-top: 1.5rem;
     padding: 6rem;
     font-size: 3rem;
     color: black;
@@ -564,6 +568,8 @@ section {
 .contact .heading {
     width: 100%;
     height: 20rem;
+    padding: 6rem;
+    margin-top: 1.5rem;
     padding: 6rem;
     font-size: 3rem;
     color: black;
@@ -607,6 +613,7 @@ section {
 .mbooklist .heading {
     width: 100%;
     height: 20rem;
+    margin-top: 1.5rem;
     padding: 6rem;
     font-size: 3rem;
     color: black;
