--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,17 @@ section {
     font-size: 2rem;
     text-align: center;
 }
+
+.home .mview {
+    margin-left: 10.5rem;
+    text-align: center;
+    margin-bottom: 2rem;
+ }
+
+ .home .fview {
+    margin-left: 9.5rem;
+    text-align: center;
+ }
 /* Home section End */
 
 /* Featured section start */
